--- a/dsm-paper.tex
+++ b/dsm-paper.tex
@@ -33,7 +33,7 @@ Len Thomas$^{2}$.}
 	\item Our understanding of a biological population can be greatly enhanced by modelling their distribution in space and as a function of environmental covariates. Such models can be used to investigate the relationships between distribution and environmental covariates as well as reliably estimate abundances and create maps of animal/plant distribution. 
 	\item Density surface models consist of a spatial model of the abundance of a biological population which has been corrected for uncertain detection via distance sampling methods. 
 	\item We review recent developments in the field and consider the likely directions of future research before focussing on a popular approach based on generalized additive models.  In particular we consider spatial modelling techniques that may be advantageous to applied ecologists such as quantification of uncertainty in a two-stage model and smoothing in areas with complex boundaries.
-	\item The methods discussed are available in an \textsf{R} package developed by the authors (\texttt{dsm}) and are largely implemented in the popular Windows package Distance.
+	\item The methods discussed are available in an \textsf{R} package developed by the authors (\texttt{dsm}) and are largely implemented in the popular Windows software Distance.
 \end{enumerate}
  
 
@@ -57,7 +57,7 @@ Distance sampling extends plot sampling to the case where detection is not certa
 \end{equation}
 where $A$ is the area of the study region, $a$ is the area covered by the survey (i.e., the sum of the areas of all of the strips/circles) and the summation takes place over the $n$ observed clusters, each of size $s_i$ (if individuals are observed, $s_i=1 \forall i$) \citep[Chapter 3]{Buckland:2001vm}. Often up to half the observations in a plot sampling data set are discarded to ensure the assumption of certain detection is met. In contrast, distance sampling uses observations that would have been discarded to model detection (although typically some detections are discarded beyond a given \textit{truncation distance} during analysis).
 
-Estimators such as eqn (\ref{ht-est}) rely on the design of the study to ensure that abundance estimates over the whole study area (scaling up from the covered region) are valid. This article focusses on \textit{model-based} inference to extrapolate to a larger study area. Specifically, we consider the use of spatially explicit models to investigate the response of biological populations to biotic and abiotic covariates that vary over the study region. A spatially-explicit model can explain the between-transect variation (which is often a large component of the variance in design-based estimates) and so using a model-based approach can lead to smaller variance in estimates of abundance. Model-based inference also enables the use of data from opportunistic surveys, for example, incidental data arising from ``ecotourism'' cruises \citep{Williams:2006tz}. 
+Estimators such as eqn (\ref{ht-est}) rely on the design of the study to ensure that abundance estimates over the whole study area (scaling up from the covered region) are valid. This article focusses on \textit{model-based} inference to extrapolate to a larger study area. Specifically, we consider the use of spatially explicit models to investigate the response of biological populations to biotic and abiotic covariates that vary over the study region. A spatially-explicit model can explain the between-transect variation (which is often a large component of the variance in design-based estimates) and so using a model-based approach can lead to smaller variance in estimates of abundance than design-based estimates. Model-based inference also enables the use of data from opportunistic surveys, for example, incidental data arising from ``ecotourism'' cruises \citep{Williams:2006tz}. 
 
 Our aims in creating a spatial model of a biological population are usually two-fold: (i) estimating overall abundance and (ii) investigating the relationship between abundance and environmental covariates. As with any predictions that are outside the range of the data, one should heed the usual warnings regarding extrapolation. For example, if a model contains elevation as a covariate, predictions at high, unsampled elevations are unlikely to be reliable. Frequently, maps of abundance or density are required and any spurious predictions can be visually assessed, as well as by plotting a histogram of the predicted values. A sensible definition of the region of interest avoids prediction outside the range of the data.
 
@@ -79,7 +79,7 @@ The focus of this article is the ``count model'' of \cite{Hedley:2004et}, we wil
 
 \cite{Niemi:2010kx} proposed a Bayesian point process approach to spatial abundance modelling. The density of the objects is described by an intensity function, which included spatially-referenced covariates. Model fitting proceeded in two stages: first the detection function was fitted, then the spatial model (via MCMC) assuming the detection function parameters were known, so detection function uncertainty was not incorporated in the spatial model. A marked point process \citep[Section 5.5]{cox1980point} could be used to incorporate cluster size information.
 
-\cite{VerHoef:2013ky} modeled seal populations in the Bering Sea using a Bayesian spatial model, using a detection function to account for uncertain detection and incorporating additional information from a (frequentist) model of seal haul-outs on ice. The detection function and haul-out model corrected the observed density estimates which were modelled using a Bayesian hierarchical model for the spatial component. The Bayesian hierarchical model was itself was split into two parts ($i$) a presence/absence part to allow modelling of the large number of zeros in the data and ($ii$) a density part also used to account for spatial autocorrelation. The analysis shows that that when extra information is available (such as telemetry data for the haul-out process) additional insight can be derived.
+\cite{VerHoef:2013ky} modeled seal populations in the Bering Sea using a Bayesian spatial model, using a detection function to account for uncertain detection and incorporating additional information from a (frequentist) model of seal haul-outs on ice. The detection function and haul-out model corrected the observed density estimates which were modelled using a Bayesian hierarchical model for the spatial component. The Bayesian hierarchical model was itself was split into two parts ($i$) a presence/absence part to allow modelling of the large number of zeros in the data and ($ii$) a density part also used to account for spatial autocorrelation. The analysis shows that when extra information is available (such as telemetry data for the haul-out process) additional insight can be derived.
 
 We note that there are many approaches to modelling spatially referenced count data \citep[][provides an overview of such methods for marine bird modelling]{Oppel:2011tv}. Also worthy of note is the approach of \cite{Barry:2002bm} who used a two-stage approach to model presence/absence then spatial pattern (via two GAMs) to account for zero-inflation.
 
@@ -97,7 +97,7 @@ The work of \cite{Schmidt:2011ec} took a similar approach to \cite{Royle:2008wc}
 
 Generally very little information is lost by taking a two-stage approach. This is because transects are typically very narrow compared with the width of the study area so, provided no significant density variation takes place ``across'' the of the lines or within the point, there is no information in the distances about the spatial distribution of animals (this is an assumption of two-stage approaches). 
 
-Two-stage approaches are effectively divide and conquer techniques: concentrating on the detection function first, and then given the detection function, fitting the spatial model. One-stage models are more more difficult to both estimate and check as both steps occur at once; models are potentially simpler from the perspective of the user and perhaps more mathematically elegant.
+Two-stage approaches are effectively divide and conquer techniques: concentrating on the detection function first, and then given the detection function, fitting the spatial model. One-stage models are more difficult to both estimate and check as both steps occur at once; models are potentially simpler from the perspective of the user and perhaps more mathematically elegant.
 
  Two-stage models have the disadvantage that to accurately quantify model uncertainty one must appropriately combine uncertainty from the detection function and spatial models. This can be challenging; however the alternative of ignoring uncertainty from the detection process \cite[e.g.][]{Niemi:2010kx} can produce confidence or credible intervals for abundance estimates that have coverage below the nominal level. More information regarding how variance estimation is addressed for DSMs is given in \textit{Recent developments}.
 
@@ -198,7 +198,7 @@ The Tweedie distribution offers a flexible alternative to the quasi-Poisson and 
 
 The distribution has three parameters parameters: a mean, dispersion and a third power parameter, which leads to additional flexibility. The distribution does not change appreciably when the power parameter is changed by less than $0.1$ and therefore a simple line search over the possible values for the power parameter is usually a reasonable approach to estimating the parameter. Mark Bravington (pers. comm.) suggested plotting the square root of the absolute value of the residuals against fitted values; a ``flatter'' plot (points forming a horizontal line) give an indication of a ``good'' value. We additionally suggest using the metrics described in the next section for model selection.
 
-Appendix D gives further details about the Tweedie distribution (including its PDF and further references).
+Appendix D gives further details about the Tweedie distribution (including its probability density function and further references).
 
 \section*{Practical advice}
 \label{s:practical}
@@ -211,7 +211,7 @@ Smooth terms can be selected using (approximate) $p$-values \cite[][Section 4.8.
 
 In the analysis of the dolphin data we included a smooth of location that nearly doubles the percentage deviance explained (27.3\% to 52.7\%). One can see this when comparing the two plots in Fig. \ref{fits-depth} and the plot of the depth (Fig. \ref{dolphin-eda}), the plot of the model containing only a smooth of depth looks very similar to the raw plot of the depth data. Using a smooth of location can be a primitive way to account for spatial autocorrelation and/or as a proxy for other spatially varying covariates that are unavailable. 
 
-A more sophisticated way to account for spatial autocorrelation between segments (within transects) is to use a an autocorrelation structure within the DSM (e.g. autoregressive models). Appendix A shows an example using generalized additive mixed model \cite[GAMMs;][Section 6.6, see Appendix A for an example]{Wood:2006wz} to construct an autoregressive (lag 1) correlation structure. This gives a significant reduction in variance, tightening the confidence interval around the abundance estimate.
+A more sophisticated way to account for spatial autocorrelation between segments (within transects) is to use an autocorrelation structure within the DSM (e.g. autoregressive models). Appendix A shows an example using generalized additive mixed model \cite[GAMMs;][Section 6.6, see Appendix A for an example]{Wood:2006wz} to construct an autoregressive (lag 1) correlation structure. This gives a significant reduction in variance, tightening the confidence interval around the abundance estimate.
 
 In the analysis presented here, spatial location has been transformed from latitude and longitude to kilometres north and east of the centre of the survey region at $(27.01^\circ, -88.3^\circ)$. This is because the bivariate smoother used \citep[the thin plate spline;][]{Wood:2003tc} is isotropic: there is only one parameter controlling the smoothness in both directions. Moving one degree in latitude is not the same as moving one degree in longitude and so using kilometres from the centre of the study region makes the covariates isotropic. Using metric units rather than non-standard units of measure such as degrees or feet throughout makes analysis much easier.
 
