--- a/dsm-refs.bib
+++ b/dsm-refs.bib
@@ -63,23 +63,16 @@ rating = {0},
 date-added = {2012-07-12T20:08:02GMT+00:00},
 date-modified = {2013-05-02T17:46:13GMT+00:00},
 url = {http://www.iwcoffice.org/_documents/sci_com/SC62docs/SC-62-IA12Rev.pdf},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf},
-file = {{Bravington--2010.pdf:/Users/dill/Dropbox/Papers2/2010/Bravington--2010.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/C6C86554-53D5-4A16-BE5A-B894AFD08CC5}}
 }
 
 @techreport{Bravington:2009vo,
 author = {Bravington, Mark V and Hedley, Sharon L},
 title = {{Antarctic minke whale abundance estimates from the second and third circumpolar IDCR/SOWER surveys using the SPLINTR model}},
 year = {2009},
-publisher = {Paper SC/61/IA14 presented to the IWC Scientific Committee},
+number = {Paper SC/61/IA14},
+institution = {IWC Scientific Committee},
 read = {Yes},
 rating = {0},
-date-added = {2012-07-12T20:08:02GMT+00:00},
-date-modified = {2013-05-02T17:46:13GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf},
-file = {{Bravington--2009.pdf:/Users/dill/Dropbox/Papers2/2009/Bravington--2009.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/323A731F-7B00-4AAA-9BE4-96F18CCC428D}}
 }
 
 @article{Breiman:2001wf,
@@ -317,7 +310,7 @@ uri = {\url{papers2://publication/doi/10.1093/biomet/82.4.711}}
 
 @article{Halpin:2009je,
 author = {Halpin, Patrick and Read, Andrew and Fujioka, Ei and Best, Ben and Donnelly, Ben and Hazen, Lucie and Kot, Connie and Urian, Kim and LaBrecque, Erin and Dimatteo, Andrew and Cleary, Jesse and Good, Caroline and Crowder, Larry and Hyrenbach, K David},
-title = {{OBIS-SEAMAP: The world data Center for marine mammal, sea bird, and sea turtle distributions}},
+title = {{OBIS-SEAMAP: The world data center for marine mammal, sea bird, and sea turtle distributions}},
 journal = {Oceanography},
 year = {2009},
 volume = {22},
@@ -500,7 +493,6 @@ rating = {0},
 @article{Miller:2012tm,
 author = {Miller, David Lawrence and Wood, Simon N},
 title = {{Finite area smoothing with generalized distance splines}},
-pages = {1--27},
 year = {submitted},
 read = {Yes},
 rating = {0},
@@ -598,13 +590,8 @@ title = {{Comparison of five modelling techniques to predict the spatial distrib
 journal = {Biological Conservation},
 year = {2011},
 publisher = {Elsevier},
-read = {Yes},
-rating = {0},
-date-added = {2012-03-26T02:03:41GMT+00:00},
-date-modified = {2013-05-06T15:19:22GMT+00:00},
-local-url = {file://localhost/Users/dill/Dropbox/Papers2/2011/Oppel-Biological_Conservation-2011-1.pdf},
-file = {{Oppel-Biological_Conservation-2011-1.pdf:/Users/dill/Dropbox/Papers2/2011/Oppel-Biological_Conservation-2011-1.pdf:application/pdf}},
-uri = {\url{papers2://publication/uuid/B3C32464-1B9E-431F-AB3B-008034DE8C2E}}
+pages = {94-104},
+volume = 156
 }
 
 @techreport{Petersen:2011vy,
