ready fro resubmission?

--- a/dsm-paper.tex
+++ b/dsm-paper.tex
@@ -32,7 +32,7 @@ Len Thomas$^{2}$.}
 \begin{enumerate}
 	\item Our understanding of a biological population can be greatly enhanced by modelling their distribution in space and as a function of environmental covariates. Such models can be used to investigate the relationships between distribution and environmental covariates as well as reliably estimate abundances and create maps of animal/plant distribution. 
 	\item Density surface models consist of a spatial model of the abundance of a biological population which has been corrected for uncertain detection via distance sampling methods. 
-	\item We review recent developments in the field and consider the likely directions of future research before focussing on a popular approach based on generalized additive models.  In particular we consider spatial modelling techniques that may be advantageous to applied ecologists such as quantification of uncertainty in a two-stage model and smoothing in areas with complex boundaries.
+	\item We review recent developments in the field and consider the likely directions of future research before focussing on a popular approach based on generalized additive models.  In particular, we consider spatial modelling techniques that may be advantageous to applied ecologists such as quantification of uncertainty in a two-stage model and smoothing in areas with complex boundaries.
 	\item The methods discussed are available in an \textsf{R} package developed by the authors (\texttt{dsm}) and are largely implemented in the popular Windows software Distance.
 \end{enumerate}
  
@@ -85,26 +85,26 @@ We note that there are many approaches to modelling spatially referenced count d
 
 \subsection*{One-stage approaches}
 
-Rather than fitting two separate models, some authors have combined the detection function and spatial model fitted (mostly via hierarchical Bayesian methods). The first of these was \cite{Royle:2004tu}, who estimated the parameters of a specified detection function, formulating an unconditional likelihood per-point/line as a function of the unobserved transect abundances. These unobserved abundances were treated as random effects, integrated out to give a per-transect likelihood as a function of detection function and random effects parameters (linear functions of the environmental covariates). Due to the multinomial nature of the per-transect likelihood proposed, distance data must be allocated to bins (e.g. 0-5m, 5-15m, etc). \cite{Chelgren:2011us} proposed replacing the multinomial per-transect likelihood with a binomial distribution multiplied by a detection function. The binomial term collapses the multinomial bins into a single bin and gives the number of animals detected in the transect, thus allowing the use of exact distances.
+Rather than fitting two separate models, some authors have combined the detection function and spatial model fitted (mostly via hierarchical Bayesian methods). The first of these was \cite{Royle:2004tu}, who estimated the parameters of a specified detection function, formulating an unconditional likelihood per-point/line as a function of the unobserved transect abundances. These unobserved abundances were treated as random effects, integrated out to give a per-transect likelihood as a function of detection function and random effects parameters (linear functions of the environmental covariates). Due to the multinomial nature of the per-transect likelihood proposed, detection distances must be allocated to bins (e.g. 0-5m, 5-15m, etc). \cite{Chelgren:2011us} proposed replacing the multinomial per-transect likelihood with a binomial distribution multiplied by a detection function. The binomial term collapses the multinomial bins into a single bin and gives the number of animals detected in the transect, thus allowing the use of exact distances.
 
-The work of \cite{Schmidt:2011ec} took a similar approach to \cite{Royle:2008wc}, building a presence/absence-type model for clusters, augmenting the data with unobserved clusters. The authors then used a Poisson distribution to model cluster size (using a random effect to incorporate overdispersion), combining these parts gave a model of individual abundance. \cite{Conn:2012bx} also used a hierarchical Bayesian model but in terms of abundance rather than density using a super-population/data augmentation approach \cite[as in][]{Link:2009wv}. In their formulation, the whole population within the study region is modelled, not just those animals observed during the survey.
+The work of \cite{Schmidt:2011ec} took a similar approach to \cite{Royle:2008wc}, building a presence/absence-type model for clusters, augmenting the data with unobserved clusters. The authors then used a Poisson distribution to model cluster size (using a random effect to incorporate overdispersion), combining these parts gave a model of individual abundance. \cite{Conn:2012bx} also used a hierarchical Bayesian model but in terms of abundance rather than density using a super-population/data augmentation approach \cite[as in][]{Link:2009wv}. In their formulation, the whole population within the study region was modelled, not just those animals observed during the survey.
 
-\cite{Moore:2011jf} adopted a hierarchical Bayesian state-space model, separating the problem into observation and process components. The process component described the underlying population density as it changes over time and space (though the authors only included strata as a spatial component). The observation part of the model then linked the process model to the data via the detection function. 
+\cite{Moore:2011jf} adopted a hierarchical Bayesian state-space model, separating the problem into observation and process components. The process component described the underlying population density as it changed over time and space (though the authors only included strata as a spatial component). The observation part of the model then linked the process model to the data via the detection function. 
 
-\cite{Johnson:2010gf} proposed a point process-based model for distance sampling data. They first assumed that the locations of all individuals in the survey area (not just those observed) form a realisation of a Poisson process. Parameters of the intensity function were then estimated via standard maximum likelihood methods for point processes \citep{Baddeley:2000to}. All parameters were estimated jointly so uncertainty from both the spatial pattern and the detection function was incorporated into variance estimates of the abundance. This also ensured that correlations between the detection function and underlying point process are estimated correctly (and do not falsely inflate or deflate variance estimates). A post-hoc correction factor was used to address overdispersion unmodelled by spatial covariates (i.e. counts that do not follow a Poisson mean-variance relationship).
+\cite{Johnson:2010gf} proposed a point process-based model for distance sampling data. They first assumed that the locations of all individuals in the survey area (not just those observed) form a realisation of a Poisson process. Parameters of the intensity function were then estimated via standard maximum likelihood methods for point processes \citep{Baddeley:2000to}. All parameters were estimated jointly so uncertainty from both the spatial pattern and the detection function was incorporated into variance estimates of the abundance. This also ensured that correlations between the detection function and underlying point process were estimated correctly (and did not falsely inflate or deflate variance estimates). A post-hoc correction factor was used to address overdispersion unmodelled by spatial covariates (i.e. counts that do not follow a Poisson mean-variance relationship).
 
 \subsection*{One- vs. two-stage approaches}
 
-Generally very little information is lost by taking a two-stage approach. This is because transects are typically very narrow compared with the width of the study area so, provided no significant density variation takes place ``across'' the of the lines or within the point, there is no information in the distances about the spatial distribution of animals (this is an assumption of two-stage approaches). 
+Generally very little information is lost by taking a two-stage approach. This is because transects are typically very narrow compared with the width of the study area so, provided no significant density variation takes place ``across'' the width of the lines or within the point, there is no information in the distances about the spatial distribution of animals (this is an assumption of two-stage approaches). 
 
-Two-stage approaches are effectively divide and conquer techniques: concentrating on the detection function first, and then given the detection function, fitting the spatial model. One-stage models are more difficult to both estimate and check as both steps occur at once; models are potentially simpler from the perspective of the user and perhaps more mathematically elegant.
+Two-stage approaches are effectively ``divide and conquer'' techniques: concentrating on the detection function first, and then, given the detection function, fitting the spatial model. One-stage models are more difficult to both estimate and check as both steps occur at once; models are potentially simpler from the perspective of the user and perhaps more mathematically elegant.
 
- Two-stage models have the disadvantage that to accurately quantify model uncertainty one must appropriately combine uncertainty from the detection function and spatial models. This can be challenging; however the alternative of ignoring uncertainty from the detection process \cite[e.g.][]{Niemi:2010kx} can produce confidence or credible intervals for abundance estimates that have coverage below the nominal level. More information regarding how variance estimation is addressed for DSMs is given in \textit{Recent developments}.
+ Two-stage models have the disadvantage that to accurately quantify model uncertainty one must appropriately combine uncertainty from the detection function and spatial models. This can be challenging; however, the alternative of ignoring uncertainty from the detection process \cite[e.g.][]{Niemi:2010kx} can produce confidence or credible intervals for abundance estimates that have coverage below the nominal level. More information regarding how variance estimation is addressed for DSMs is given in \textit{Recent developments}.
 
 \section*{Density surface modelling}
 \label{s:dsm}
 
-This section focuses on modelling the density/abundance estimation stage of the DSM approach introduced previously. Both line and point transects can be used, but if lines are used then they are are split into contiguous \textit{segments} (indexed by $j$), which are of length $l_j$. Segments should be small enough such that neither density of objects nor covariate values vary appreciably within a segment (usually making the segments approximately square is sufficient; $2w\times 2w$, where $w$ is the truncation distance). The area of each segment enters the model as (or as part of) an offset: the area of segment $j$ is $A_j = 2wl_j$ and for point $j$ is $A_j=\pi w^2$. 
+This section focuses on modelling the density/abundance estimation stage of the DSM approach introduced previously. Both line and point transects can be used, but if lines are used then they are are split into contiguous \textit{segments} (indexed by $j$), which are of length $l_j$. Segments should be small enough such that neither density of objects nor covariate values vary appreciably within a segment (making the segments approximately square is usually sufficient; $2w\times 2w$, where $w$ is the truncation distance). The area of each segment enters the model as (or as part of) an offset: the area of segment $j$ is $A_j = 2wl_j$ and for point $j$ is $A_j=\pi w^2$. 
 
 Count or estimated abundance (per  segment or point) is then modelled as a sum of smooth functions of covariates ($z_{jk}$ with $k$ indexing the covariates, e.g., location, sea surface temperature, weather conditions; measured at the segment/point level) using a generalized additive model. Smooth functions are modelled as splines, providing flexible unidimensional (and higher-dimensional) curves (and surfaces, etc) that describe the relationship between the covariates and response. \cite{Wood:2006wz} and \cite{ruppert2003semiparametric} provide more in-depth introductions to smoothing and generalized additive models.
 
@@ -145,11 +145,11 @@ The above models consider the case where the covariates are measured at the segm
 \hat{N}_j = \sum_{r=1}^{R_j} \frac{s_{jr}}{\hat{p}(z_{rj})}.
 \end{equation*}
 
-Density can be modelled rather than abundance by not including an offset, but instead dividing the count (or estimated abundance) by the area of the segment/point (and weighting observations by the segment/point areas). We concentrate on abundance here; see \cite{Hedley:2004et} for further details on modelling density.
+Density, rather than abundance, can be modelled by excluding the offset and instead dividing the count (or estimated abundance) by the area of the segment/point (and weighting observations by the segment/point areas). We concentrate on abundance here; see \cite{Hedley:2004et} for further details on modelling density.
 
 \subsection*{Prediction}
 
-A DSM can be used to predict abundance over a larger/different area than was originally surveyed. In that case the investigator must create a series of prediction cells over the prediction region. For each cell the covariates included in the DSM must be available; the area of each cell is also required. Having made predictions for each cell, these can be plotted as an abundance map (as in Fig. \ref{fits-depth}) or, summing over cells, an overall estimate of abundance can be calculated. It is worth noting that using prediction grid cells that are smaller than the resolution of the spatially referenced data has no effect on abundance/density estimates.
+A DSM can be used to predict abundance over a larger/different area than was originally surveyed. In that case the investigator must create a series of prediction cells over the prediction region. For each cell the covariates included in the DSM must be available; the area of each cell is also required. Having made predictions for each cell, these can be plotted as an abundance map (as in Fig. \ref{fits-depth}) and, by summing over cells, an overall estimate of abundance can be calculated. It is worth noting that using prediction grid cells that are smaller than the resolution of the spatially referenced data has no effect on abundance/density estimates.
 
 \subsection*{Variance estimation}
 
@@ -165,11 +165,11 @@ Denote the fitted values for the model to be $\hat{\bm{\eta}}$. For $b=1,\ldots,
 \end{enumerate}
 From the predicted values stored in the last step the variance originating in the spatial part of the model can be calculated. The total variance of the abundance estimate (over the whole region of interest or sub-areas) can then be found by combining the variance estimate from the bootstrap procedure with the variance of the probability of detection from the detection function model using the delta method \citep[which assumes that the two components of the variance are independent;][]{verhoef:2012}.
 
-The above procedure assumes that there is no correlation in space between segments, which are usually contiguous along transects. If many animals are observed in a particular segment then we might expect there to be high numbers in the adjacent segments. A moving block bootstrap \citep[MBB;][Section 8.6]{Efron:1993tv} can account for some of this spatial autocorrelation in the variance estimation. The segments are grouped together into overlapping blocks (so if the block size is 5, block one is segments $1,\ldots,5$, block two is segments $2,\ldots,6$, and so on). Then, at step (2) above, resamples are taken at the block level (rather than individual segments within a transect). Using MMB will account for correlation between the segments at scales smaller than the block size, inflating the variances accordingly. Block size can be selected by plotting an autocorrelogram of the residuals from the DSM. Block size dictates the maximum amount of spatial autocorrelation accounted for, this may not fully account for the autocorrelation (testing sensitivity to block size by trying several different sizes can be time consuming). 
+The above procedure assumes that there is no correlation in space between segments, which are usually contiguous along transects. If many animals are observed in a particular segment then we might expect there to be high numbers in the adjacent segments. A moving block bootstrap \citep[MBB;][Section 8.6]{Efron:1993tv} can account for some of this spatial autocorrelation in the variance estimation. The segments are grouped together into overlapping blocks (so if the block size is 5, block one is segments $1,\ldots,5$, block two is segments $2,\ldots,6$, and so on). Then, at step (2) above, resamples are taken at the block level (rather than individual segments within a transect). Using MMB will account for correlation between the segments at scales smaller than the block size, inflating the variances accordingly. Block size can be selected by plotting an autocorrelogram of the residuals from the DSM.
 
-Both bootstrap procedures can also be modified to take into account detection function uncertainty by simulating distances from the fitted detection function and then re-calculating the offset by fitting a detection function to the simulated distances.
+Both bootstrap procedures can also be modified to take detection function uncertainty into account. Distances are simulated from the fitted detection function and then the offset is re-calculated by fitting a detection function to the simulated distances.
  
-Estimation of uncertainty for a given prediction region can be found by calculating the appropriate quantiles of the resulting abundance estimates (outlier removal may be required before quantile calculation). DSM uncertainty can be visualised via a plot of per-cell coefficient of variation obtained by dividing the standard error for each cell by its predicted abundance (as in Fig. \ref{cv-plot}). 
+Uncertainty can be estimated for a given prediction region by calculating the appropriate quantiles of the resulting abundance estimates (outlier removal may be required before quantile calculation). DSM uncertainty can be visualised via a plot of per-cell coefficient of variation obtained by dividing the standard error for each cell by its predicted abundance (as in Fig. \ref{cv-plot}). 
 
 \section*{Recent developments}
 \label{s:recentadvances}
@@ -187,7 +187,7 @@ Fig. \ref{cv-plot} shows a map of the coefficient of variation for the model whi
 \subsection*{Edge effects}
 \label{s:leakage}
 
-Previous work \citep{Ramsay:2002uo,Wang:2007tf,Wood:2008vo,ScottHayward:2011tc,Miller:2012tm} has highlighted the need to take care when smoothing over areas with complicated boundaries, e.g., those with rivers, peninsulae or islands. If two parts of the study area (either side of a river or inlet, say) are inappropriately linked by the model (i.e. if the distance between the points is measured as a straight line, rather taking into account obstacles) then the boundary feature (river, etc) can be ``smoothed across'' so positive abundances are predicted in areas where animals could not possibly occur. Ensuring that a realistic spatial model has been fitted to the data is essential for valid inference. The soap film smoother of \cite{Wood:2008vo} is an appealing solution: a bivariate smooth function of location that can be included in any GAM but that allows for boundary conditions to be estimated and obeyed for a complex study area. Such an approach can be helpful when uncertainty is estimated via a bootstrap as edge effects can also cause large, unrealistic predictions which can plague other smoothers \citep{Bravington:2009vo}.
+Previous work \citep{Ramsay:2002uo,Wang:2007tf,Wood:2008vo,ScottHayward:2011tc,Miller:2012tm} has highlighted the need to take care when smoothing over areas with complicated boundaries, e.g., those with rivers, peninsulae or islands. If two parts of the study area (either side of a river or inlet, say) are inappropriately linked by the model (i.e. if the distance between the points is measured as a straight line, rather than taking into account obstacles) then the boundary feature (river, etc) can be ``smoothed across'' so positive abundances are predicted in areas where animals could not possibly occur. Ensuring that a realistic spatial model has been fitted to the data is essential for valid inference. The soap film smoother of \cite{Wood:2008vo} is an appealing solution: a bivariate smooth function of location that can be included in any GAM but that allows for boundary conditions to be estimated and obeyed for a complex study area. Such an approach can be helpful when uncertainty is estimated via a bootstrap as edge effects can also cause large, unrealistic predictions which can plague other smoothers \citep{Bravington:2009vo}.
 
 Even if the study area does not have a complicated boundary, edge effects can still be problematic. \cite{Miller:2012wy} notes that some smoothers have plane components that tend to cause the fitted surface to increase unrealistically as predictions are made further away from the locations of survey effort. This problem can be alleviated by the using a different type of smoother (e.g. a generalisation of thin plate regression splines called \textit{Duchon splines}).
 
@@ -228,7 +228,7 @@ Unbiased estimates are dependent upon either (i) distribution of sampling effort
 
 The field is quickly evolving to allow modelling of more complex data building on the basic ideas of density surface modelling. We expect to see large advances in temporal inferences and the handling of zero-inflated data and spatial correlation. These should become more mainstream as modern spatio-temporal modelling techniques are adopted. \cite{Petersen:2011vy} provided a very basic framework for temporal modelling; their model included ``before'' and ``after'' smooth terms to quantify the impact of the construction of an offshore windfarm. Zero-inflation in count data may be problematic and two-stage approaches such as \cite{Barry:2002bm} as well as more flexible response distributions made possible by \cite{Rigby:2005wb} have yet to be exploited by those using distance sampling data. Spatial autocorrelation can be accounted for via approaches that explicitly introduce correlations such as generalized estimating equations \cite[GEEs;][]{Hardin:2003uf} or generalized additive mixed models or via mechanisms such as that of \cite{Skaug:2006gs}, which allow observations to cluster according to one of several states (such as high vs low density patches, possibly in response to temporary agglomerations of prey, although the mechanism is unimportant). These advances should assist both modellers and wildlife managers to make optimal conservation decisions. 
 
-Advances in Bayesian computation \cite[INLA;][]{Rue:2009tw}, make one-step, Bayesian, density surface models computationally feasible (as INLA is an alternative to MCMC). We anticipate that such a direct modelling technique will dominate future developments in the field.
+Advances in Bayesian computation \cite[INLA;][]{Rue:2009tw}, make one-step, Bayesian, density surface models computationally feasible (as INLA is an alternative to MCMC). An important step toward such models will be incorporation of detection function estimation into the spatial model. We anticipate that such a direct modelling technique will dominate future developments in the field.
 
 Density surface modelling allows wildlife managers to make best use of the available spatial data to understand patterns of abundance, and hence make better conservation decisions (e.g., about reserve or development placement). The recent advances mentioned here increase the reliability of the outputs from a modelling exercise, and hence the efficacy of these decisions.  Density surface modelling from survey data is an active area of research, and we look forward to further improvements and extensions in the near future.
 
@@ -281,7 +281,7 @@ We wish to thank Paul Conn, another anonymous reviewer, and the associate editor
 \newpage
 
 \begin{figure}[h!]
-  \caption{Plot of the effect on the response of depth (from the model with both depth and location smooths), note that it is possible to draw a straight line between 750m and 3000m within the confidence band (between the dashed lines), so the wiggles in the smooth may not be indicative of any relationship. What is clear is that there the estimated number of dolphins increases up to about 500m. The rug ticks at the bottom of the plot indicate we have good coverage of the range of depth values in the survey area. Note that the $y$ axis in such plots is on the scale of the link function ($\log$ in this case), so care should be taken in their interpretation.}
+  \caption{Plot of the effect on the response of depth, given location (from the model with both depth and location smooths). Note that it is possible to draw a straight line between 750m and 3000m within the confidence band (between the dashed lines), so the wiggles in the smooth may not be indicative of any relationship. What is clear is that there the estimated number of dolphins increases up to a water depth of about 500m. The rug ticks at the bottom of the plot indicate we have good coverage of the range of depth values in the survey area. Note that the $y$ axis in such plots is on the scale of the link function ($\log$ in this case), so care should be taken in their interpretation.}
   \label{depth-gamplot}
   \begin{center}
     \includegraphics[width=\textwidth]{fit-depth-gam}
